# code-reviewer-agent

./: .gitignore  README.md  cli.py  pyproject.toml
.github/workflows/: code_review.yml
code_reviewer/: llm_interface.py  pipeline.py
code_reviewer/agents/: change_critic.py  context_analyst.py  diff_reader.py  report_writer.py
tests/sample_repo/: LastCommitReview.md  README.md  main.py
tests/sample_repo/..git/: COMMIT_EDITMSG  index
tests/sample_repo/..git/logs/refs/heads/: master
tests/sample_repo/..git/refs/heads/: master
