[project]
name = "code-reviewer-agent"
version = "0.1.0"
description = "An AI agent that reviews code changes via GitHub Actions"
authors = [{name = "João Pedro", email = "you@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3.66",
    "langchain-community>=0.3.26",
    "langchain-openai>=0.3.24",
    "gitpython>=3.1",
    "pydantic>=2",
    "tqdm",
    "requests>=2.32.4",
    "ollama-python>=0.1.2"
]

[project.scripts]
review = "cli:main"
